# opensnitch-for-windows-

./: .gitignore  WINDOWS_PORT.md  build.ps1
OpenSnitch-Windows/: README.md  build.ps1
OpenSnitch-Windows/daemon/: decision.go  go.mod  go.sum  grpc.go  main.go  process.go  wfp.go
OpenSnitch-Windows/driver/: OpenSnitchCallout.c
OpenSnitch-Windows/installer/: OpenSnitch.wxs
WinSnitch/: .gitignore  README.md  build.ps1  build_windows.bat  make_exe.bat  package.json
WinSnitch/backend/: go.mod  go.sum  main.go  wfp.go
WinSnitch/backend/cmd/winsnitchd/: main.go
WinSnitch/backend/internal/api/: ws.go
WinSnitch/backend/internal/blocklist/: blocklist.go
WinSnitch/backend/internal/config/: config.go
WinSnitch/backend/internal/dnscache/: cache.go
WinSnitch/backend/internal/events/: events.go
WinSnitch/backend/internal/logging/: jsonlog.go
WinSnitch/backend/internal/multinode/: manager.go
WinSnitch/backend/internal/rules/: rules.go
WinSnitch/backend/internal/service/: service.go
WinSnitch/backend/internal/wfp/: engine_stub.go  engine_windows.go
WinSnitch/frontend/: index.html  package-lock.json  package.json
WinSnitch/frontend/src/: main.tsx
WinSnitch/installer/: winsnitch.nsi
WinSnitch/src-tauri/: Cargo.toml  tauri.conf.json
WinSnitch/src-tauri/src/: lib.rs  main.rs
WinSnitch/tools/: make_exe.py  package_with_python.py
common/: README.md
daemon/: go.mod
daemon/cmd/opensnitchd-windows/: main.go
driver/: README.md
installer/: README.md
ui/opensnitch/database/: __init__.py
ui/opensnitch/utils/: __init__.py  xdg.py
(+9 files in other folders)
