[package]
name = "winsnitch"
version = "0.1.0"
description = "WinSnitch desktop UI"
authors = ["WinSnitch Team"]
license = "GPL-3.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.2", features = ["tray-icon", "image-png"] }
tauri-plugin-notification = "2.0.1"
tauri-plugin-shell = "2.0.1"
tauri-plugin-autostart = "2.0.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
